	PR c++/41611 	* decl2.c (get_guard): Copy DECL_COMDAT. 	(comdat_linkage): Set DECL_COMDAT unconditionally.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@154885 138bc75d-0d04-0410-961f-82ee72b054a4